- Updated btop config - Cleaned .zshrc - Ditched wofi for hyprlauncher - Clean hyprland.conf - Ditched fusuma for new native gestures - Ditched qt5ct for new hyprqt6engine - Switch file manager to yazi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,14 +4,13 @@
 #Dark Mode
 source=~/.config/hypr/mocha.conf
 
-
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,hyprqt6engine
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
@@ -21,7 +20,6 @@ env = WLR_NO_HARDWARE_CURSORS,1
 env = OZONE_PLATFORM,wayland
 
 env = CLUTTER_BACKEND,wayland
-
 
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 env = HYPRCURSOR_SIZE,18
@@ -35,40 +33,34 @@ env = VDPAU_DRIVER,radeonsi
 env = TERMINAL,kitty
 
 
-#exec = gsettings set org.gnome.desktop.interface gtk-theme 'catppuccin-mocha-lavender'
-#exec = gsettings set org.gnome.desktop.interface icon-theme 'Papirus-Dark'
-#exec = gsettings set org.gnome.desktop.interface cursor-theme 'catppuccin-mocha-dark-cursors'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'catppuccin-mocha-lavender'
+exec = gsettings set org.gnome.desktop.interface icon-theme 'Papirus'
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'catppuccin-mocha-dark-cursors'
 exec = gsettings set org.gnome.desktop.interface font-name 'JetBrainsMono Nerd Font'
 
 monitor=eDP-1,1920x1080@60,0x0,1,vrr, 1
-#monitor=desc:Samsung Electric Company SyncMaster H9MS504221,1600x900@60,auto-left,1,
+monitor=desc:Samsung Electric Company SyncMaster H9MS504221,1600x900@60,auto-left,1,
 monitor=desc:LG Electronics W2043 0x0002C7C0,1600x900@60,auto-left,1,
-#monitor = , preferred, auto, 1, mirror, eDP-1
+monitor = , preferred, auto, 1, mirror, eDP-1
 
 workspace = special:special,defaultName:Media
 workspace = name:Media, gapsout:100
-#exec-once = aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
-#exec-once = gnome-keyring-daemon --start --components=secrets
-#exec-once = hyprpm reload
-#exec-once = uwsm app -- darkman run
-exec-once = uwsm app -- fusuma -d
+exec-once = aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
 exec-once = uwsm app -- udiskie
 exec-once = uwsm app -- syshud
 exec-once = clipse -listen
-#exec-once = uwsm app -- hyprpaper
-#exec-once = uwsm app -- hypridle
-#exec-once = uwsm app -- hyprpolkitagent
-#exec-once = uwsm app -- swaync
-#exec-once = uwsm app -- waybar
+exec-once = hyprlauncher -d
 
 $mainMod = SUPER
 
 bind = $mainMod, T, exec, uwsm app -- kitty
 bind = $mainMod, K, killactive,
 bind = $mainMod, Escape, exec, uwsm app -- wlogout -l .config/wlogout/bind
-bind = $mainMod, F, exec, kitty vifm -c vsplit ~ 
-#bind = $mainMod, M, exec, uwsm app -- $(wofi --show drun --define=drun-print_desktop_file=true)
-bind = $mainMod, M, exec, wofi --show drun
+bind = $mainMod, F, exec, kitty yazi ~
+bind = $mainMod, M, exec, hyprlauncher
+bind = $mainMod, V, exec, kitty --class clipse -e zsh -c 'clipse' # TODO Find a way to use with hyprlauncher 
+bind = $mainMod, period,exec, uwsm app -- hyprlauncher #TODO Launch for emoji pick
+#bind = $mainMod, period,exec, uwsm app -- bemoji #TODO add -t when bug is fixed
 
 bind = $mainMod, Right, workspace, r+1
 bind = $mainMod, Left, workspace, r-1
@@ -83,7 +75,6 @@ bind = $mainMod Shift, Down, movetoworkspace, 1
 bind = $mainMod Shift, Right, movetoworkspace, r+1
 bind = $mainMod Shift, Left, movetoworkspace, r-1
 
-
 bind = $mainMod, L, exec, loginctl lock-session
 bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
@@ -91,7 +82,6 @@ bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bind = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindle=,XF86MonBrightnessUp,exec, brightnessctl s 5%+
 bindle=,XF86MonBrightnessDown,exec, brightnessctl s 5%-
-
 
 bindm=$mainMod, mouse:273, resizewindow
 bindm = $mainMod, mouse:272, movewindow
@@ -106,17 +96,13 @@ bindl=, XF86AudioPause, exec, playerctl pause
 bindl=, XF86AudioNext, exec, playerctl next
 bindl=, XF86AudioPrev, exec, playerctl previous
 
-bind = SUPER, V, exec, kitty --class clipse -e zsh -c 'clipse'
-
 bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1"
 bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
-bind = $mainMod, period,exec, uwsm app -- bemoji #TODO add -t when bug is fixed
 
-#windowrulev2 = persistentsize, class:*  TODO Hyprland git only as of today
+windowrulev2 = persistentsize, class:* 
 windowrulev2 = opaque,class:(google-chrome),title:(^.*\bYouTube\b.*$)
-
-windowrulev2 = opaque always, class:(vlc)
-windowrulev2 = idleinhibit always, class:(vlc)
+windowrulev2 = opaque always, class:(mvp)
+windowrulev2 = idleinhibit always, class:(mpv)
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float, class:(jetbrains-toolbox)
 windowrulev2 = pin,class:(jetbrains-toolbox)
@@ -124,13 +110,6 @@ windowrulev2 = noinitialfocus,class:(jetbrains-toolbox)
 windowrulev2 = float, class:(jetbrains*), title:(^Welcome*)
 windowrulev2 = size 20% 20%, class:(jebtains*), title:(^Welcome*)
 windowrulev2 = opacity 1 override 1 override,class:jetbrains-studio
-# fix tooltips (always have a title of `win.<id>`)
-#windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
-#windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^(win.*)$
-# fix tab dragging (always have a single space character as their title)
-#windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
-#windowrulev2 = nofocus, class:^(.*jetbrains.*)$, title:^\\s$
-
 windowrulev2 = float, class:(btop)
 windowrulev2 = size 1157 725,class:(btop)
 windowrulev2 = float,class:(impala)
@@ -149,8 +128,6 @@ windowrulev2 = fullscreen,class:*, workspace:name:Code
 windowrulev2 = maximize,class:*, workspace:name:Code
 
 
-gesture = 3, horizontal, workspace
-# TODO gesture = 3, up,  dispatcher, exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
 
 master {
     allow_small_split = false
@@ -208,7 +185,7 @@ decoration {
         vibrancy = 1
         vibrancy_darkness = 0
         special = true
-        popups = false #True causes chrome to be buggy
+        popups = true
     }
 
     shadow {
@@ -225,7 +202,6 @@ decoration {
 
 animations {
     enabled = true
-    #first_launch_animation = true
 
     bezier = easeOutQuint, 0.05, 0.9, 0.1, 1.05
 
@@ -233,8 +209,6 @@ animations {
     animation = windowsOut, 1,10, easeOutQuint, popin
     animation = windowsMove, 1,10, easeOutQuint, slide
 
-
-    #TODO BROKEN?
     animation = layersIn, 1,10, easeOutQuint, fade
     animation = layersOut, 1,10, easeOutQuint, fade
 
@@ -243,16 +217,10 @@ animations {
     animation = border, 1, 10, easeOutQuint
     animation = borderangle, 1, 10, easeOutQuint, once
 
-
     animation = workspaces, 1, 10, easeOutQuint, slide
-
 
     animation = specialWorkspaceOut, 1, 10, easeOutQuint, slidefadevert
     animation = specialWorkspaceIn, 1, 10, easeOutQuint, slidefadevert
-
-
-
-
 }
 
 input {
@@ -290,9 +258,11 @@ input {
 }
 
 gestures {
-    #workspace_swipe = true
-    #workspace_swipe_fingers = 3
     workspace_swipe_create_new = true
+    gesture = 3, horizontal, workspace
+    gesture = 4, up, dispatcher, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%+
+    gesture = 4, down, dispatcher, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+    gesture = 3, pinch, fullscreen
 }
 
 misc {
@@ -350,39 +320,6 @@ debug {
 }
 
 plugin {
-#    hyprbars {
- #       bar_height = 38
-  #      bar_color = $surface0
-   #     col.text = $text
-    #    bar_text_size = 12
-     #   bar_text_font = Jetbrains Mono Nerd Font Mono Bold
-      #  bar_button_padding = 12
-       # bar_padding = 10
-        #bar_precedence_over_border = true
-#        hyprbars-button = $color1, 20, , hyprctl dispatch killactive
- #       hyprbars-button = $color3, 20, , hyprctl dispatch fullscreen 2
-  #      hyprbars-button = $color4, 20, , hyprctl dispatch togglefloating
-   #}
-    #hyprexpo {
-     #   columns = 3
-      #  gap_size = 5
-       # bg_col = rgb(111111)
-        #workspace_method = first 1 # current # [center/first] [workspace] e.g. first 1 or center m+1
-
-#        enable_gesture = true # laptop touchpad
- #       gesture_fingers = 3  # 3 or 4
-  #      gesture_distance = 300 # how far is the "max"
-   #     gesture_positive = false # positive = swipe down. Negative = swipe up.
-    #}
-	overview {
-            autoDrag = true
-	    exitOnSwitch = true
-	    showSpecialWorkspace = true
-            reverseSwipe = false
-	    onBottom = true
-	    affectStrut = true
-	}
-#}
 
 }
 
