- Launch solaar at startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,6 +50,7 @@ exec-once = uwsm app -- udiskie
 exec-once = uwsm app -- syshud
 exec-once = clipse -listen
 exec-once = hyprlauncher -d
+exec-once = solaar --window=hide --battery-icons=solaar
 
 $mainMod = SUPER
 
