- Make yazi copy-paste case insensitive - Add bindings for yazi plugins

--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -67,7 +67,9 @@ keymap = [
 	{ on = "<Enter>",   run = "open",                        desc = "Open selected files" },
 	{ on = "<S-Enter>", run = "open --interactive",          desc = "Open selected files interactively" },
 	{ on = "y",         run = "yank",                        desc = "Yank selected files (copy)" },
+	{ on = "Y",         run = "yank",                        desc = "Yank selected files (copy)" },
 	{ on = "x",         run = "yank --cut",                  desc = "Yank selected files (cut)" },
+	{ on = "X",         run = "yank --cut",                  desc = "Yank selected files (cut)" },
 	{ on = "p",         run = "paste",                       desc = "Paste yanked files" },
 	{ on = "P",         run = "paste --force",               desc = "Paste yanked files (overwrite if the destination exists)" },
 	{ on = "-",         run = "link",                        desc = "Symlink the absolute path of yanked files" },
@@ -318,6 +320,9 @@ keymap = [
 	{ on = "n", run = "close",          desc = "Cancel the confirm" },
 	{ on = "y", run = "close --submit", desc = "Submit the confirm" },
 
+	{ on = "N", run = "close",          desc = "Cancel the confirm" },
+	{ on = "Y", run = "close --submit", desc = "Submit the confirm" },
+
 	{ on = "k", run = "arrow prev", desc = "Previous line" },
 	{ on = "j", run = "arrow next", desc = "Next line" },
 
@@ -368,3 +373,28 @@ keymap = [
 	{ on = "f", run = "filter", desc = "Filter help items" },
 ]
 
+
+[[mgr.prepend_keymap]]
+on  = "M"
+run = "plugin mount"
+
+[[mgr.prepend_keymap]]
+on   = [ "c", "m" ]
+run  = "plugin chmod"
+desc = "Chmod on selected files"
+
+
+[[mgr.prepend_keymap]]
+on   = "p"
+run  = "plugin ucp paste notify"
+desc = "Paste"
+
+[[mgr.prepend_keymap]]
+on   = "y"
+run  = "plugin ucp copy notify"
+desc = "Copy"
+
+[[mgr.prepend_keymap]]
+on   = [ "c", "a", "a" ]
+run  = "plugin compress"
+desc = "Archive selected files"
